# boardgamenightwg.github.io

./: .gitignore  README.md  config.toml
.claude/skills/: announcement-email.md
.claude/skills/announcement-email/: SKILL.md
.claude/skills/community-event/: SKILL.md
.claude/skills/host-questionnaire/: SKILL.md
.claude/skills/instagram-caption/: SKILL.md
.claude/skills/new-event/: SKILL.md
.claude/skills/past-event/: SKILL.md
.claude/skills/reminder-email/: SKILL.md
.github/workflows/: deploy.yaml  pre-commit.yaml
content/: _index.md  about.md  bayarea.md  boston-preview.md  boston.md  community.md  contact.md  faq.md  pastevents.md  preview.md  talks.md
content/posts/: roscon23_parameters.md
content/posts/conda-packaging/: index.md
content/posts/xml_launch/: index.md
content/posts/xml_launch/easy_launch_demo/: CMakeLists.txt  package.xml
content/posts/xml_launch/easy_launch_demo/config/: moveit.yaml
content/posts/xml_launch/easy_launch_demo/launch/: demo_launch.xml
slides/: my_layouts.py  roscon23_parameters.py  watch.sh  xml_launch.py
static/: CNAME
static/styles/: main.css
templates/: base.html  og.html  page.html  projects.html
templates/shortcodes/: img_caption.html
