<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easy_launch_demo</name>
  <version>1.0.0</version>
  <description>Easy Launch Demo</description>
  <maintainer email="maybe@tylerjw.dev">tyler</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kortex_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
